--- a/people.html
+++ b/people.html
@@ -152,90 +152,131 @@
 
 
 
-	<hr>
-	<section id="staff">
-	   <div class="page-header">
-	      <h3>Principal Investigator</h3>
-	   </div>
-	   <div class="row">
-	      <div class="col-md-3">
-	         <img src="thumbs/Photo_Quentin.jpeg" alt="Quentin" class="img-fluid"/>
-	      </div>
-	      <div class="col-md-9">
-	         <h4>Quentin Zhen QIN 秦震  Ph.D.</h4>
-	         <p>Quentin is an Assistant Professor of Linguistics in the Division of Humanities at the Hong Kong University of Science and Technology. He is also Associate Director of ​Center for Chinese Linguistics and a faculty associate of Center for Aging Science, HKUST. He got his Ph.D. degree in Linguistics from the Department of Linguistics, University of Kansas. Prior to joining the faculty at HKUST, he worked as Postdoctoral Researcher at the Research Center for Language, Cognition, and Neuroscience, Hong Kong Polytechnic University.</p>
-	         <p><b>Email:</b> <a href="mailto:hmzqin@ust.hk">hmzqin@ust.hk</a></p>
-	         <p><b><a href="https://sites.google.com/site/qinzhenquentin/">Personal Website</a>, <a href="https://orcid.org/0000-0002-6117-7809">ORCID ID</a>, <a href="files/C.V._Zhen Qin_Research.pdf">Curriculum Vitae</a></b></p>
-	      </div>
-	   </div>
-	</section>
-	
-	<hr>
-	
-	<section id="staff">
-	   <div class="page-header">
-	      <h3>Research Staff</h3>
-	   </div>
-	   <div class="row">
-	      <div class="col-md-3">
-	         <img src="thumbs/Photo_Susu.jpg" alt="Susu Lai" class="img-fluid"/>
-	      </div>
-	      <div class="col-md-9">
-	         <h4>Susu LAI 賴素素 (BA: Hunan U; MA: HKU)</h4>
-	         <p><i>Lab Manager & Research Assistant</i></p>
-	         <p>Susu graduated from the University of Hong Kong with an MA degree in Linguistics. She has a strong interest in psycholinguistics, specifically understanding how individuals acquire and process the prosodic features of a second language. In her previous research project, she explored implicit learning of lexical stress in second language acquisition. She is currently involved in an EEG study on L2 learners' consolidation of Cantonese tones during daytime naps.</p>
-	         <p><b>Email:</b> <a href="mailto:hmsusu@ust.hk">hmsusu@ust.hk</a></p>
-	         <p><b><a href="https://www.researchgate.net/profile/Susu-Lai">ResearchGate</a>, <a href="files/CV_Susu LAI.pdf">Curriculum Vitae</a></b></p>
-	      </div>
-	   </div>
-	</section>
-	
-	<hr>
-	
-	<section id="student">
-	   <div class="page-header">
-	      <h3>Research Student</h3>
-	   </div>
-	   <div class="row">
-	      <div class="col-md-3">
-	         <img src="thumbs/Photo_Jeremy.jpg" alt="Jeremy, Yin To CHUI" class="img-fluid"/>
-	      </div>
-	      <div class="col-md-9">
-	         <h4>Jeremy, Yin To CHUI 徐彥韜 (BA: CUHK; MA: PolyU; MPhil: UST)</h4>
-	         <p><i>Ph.D Student (HKPFS awardee)</i></p>
-	         <p>Jeremy graduated with an MA degree in Teaching Chinese as a Foreign Language from HK PolyU. He is interested in speech perception as well as the cognitive and computational mechanisms behind perceptual learning. Currently, he is working on whether, and to what extent, younger and older adults make statistical inferences (e.g. distributional information, word-referent co-occurrences) in the implicit perceptual learning L2 lexical tone categories. His previous MPhil project studied the statistical learning of Mandarin lexical tones and how individual differences played a role in learning. Jeremy’s Ph.D study is funded by the Hong Kong PhD Fellowship.</p>
-	         <p><b>Email:</b> <a href="mailto:ytchuiac@connect.ust.hk">ytchuiac@connect.ust.hk</a></p>
-	         <p><b><a href="https://www.researchgate.net/profile/Yin-To-Chui">ResearchGate</a>, <a href="https://orcid.org/0000-0002-2169-086X">ORCID ID</a>, <a href="files/CV_Jeremy.pdf">Curriculum Vitae</a></b></p>
-	      </div>
-	   </div>
-	</section>
-	
-	<hr>
-	
-	<section id="student">
-	   <div class="page-header">
-	      <h3>Past Members and Alumni</h3>
-	   </div>
-	   <div class="row">
-	      <div class="col-md-3">
-	         <img src="thumbs/Photo_Cindy.png" alt="Cindy, Rui JIN" class="img-fluid"/>
-	      </div>
-	      <div class="col-md-9">
-	         <h4>Cindy, Rui JIN 金蕊 (Senior Research Assistant, 2021-2022)</h4>
-	         <p>Cindy is currently a Ph.D student in Psychology at the University of Florida.</p>
-	      </div>
-	   </div>
-	   <hr>
-	   <div class="row">
-	      <div class="col-md-3">
-	         <img src="thumbs/Photo_Ruofan_edited.jpg" alt="Ruofan Wu" class="img-fluid"/>
-	      </div>
-	      <div class="col-md-9">
-	         <h4>Ruofan WU 吳若繁 (Research Assistant, 2022-2023)</h4>
-	         <p>Ruofan is currently a Ph.D student at the Hong Kong Polytechnic University.</p>
-	      </div>
-	   </div>
-	</section>
+         	<hr>
+               <section id="staff">
+                  <div class="page-header">
+                     <h3>Principal Investigator</h3>
+                  </div>
+                  <div class="row-fluid">
+                     <div class="span3">
+                        <img src="thumbs/Photo_Quentin.jpeg" alt="Quentin"/>
+                     <div class="span9">
+                        <h4>Quentin Zhen QIN 秦震  Ph.D.</h4>
+                        <p>Quentin is an Assistant Professor of Linguistics in the Division of Humanities at the Hong Kong University of Science and Technology. He is also Associate Director of ​Center for Chinese Linguistics and a  faculty associate of Center for Aging Science, HKUST. He got his Ph.D degree in Linguistics from the Department of Linguistics, University of Kansas. Prior to joining the faculty at HKUST, he worked as Postdoctoral Researcher at the Research Center for Language, Cognition, and Neuroscience, Hong Kong Polytechnic University. </p>
+                        <p><b>Email: </b><a href="mailto:hmzqin@ust.hk">hmzqin@ust.hk</a></p>
+                        <p><b><a href="https://sites.google.com/site/qinzhenquentin/">Personal Website</a>, <a href="https://orcid.org/0000-0002-6117-7809">ORCID ID</a>, <a href="files/C.V._Zhen Qin_Research.pdf">Curriculum Vitae</a> </b></p>
+                     </div>
+                  </div>
+               </section>
+       	       
+	<hr>  
+               <section id="staff">
+                  <div class="page-header">
+                     <h3>Research Staff</h3>
+                  </div>
+
+                  <div class="row-fluid">
+                     <div class="span3">
+                        <img src="thumbs/Photo_Susu.jpg" alt="Susu Lai"/>
+                     </div>
+                     <div class="span9">
+                        <h4>Susu LAI 賴素素  (BA: Hunan U; MA:HKU)</h4>
+			<p><i>Lab Manager & Research Assistant</i></p>
+                        <p>Susu graduated from the University of Hong Kong with an MA degree in Linguistics. She has a strong interest in psycholinguistics, specifically understanding how individuals acquire and process the prosodic features of a second language. In her previous research project, she explored implicit learning of lexical stress in second language acquisition. She is currently involved in an EEG study on L2 learners' consolidation of Cantonese tones during daytime naps.</p>
+                        <p><b>Email: </b><a href="mailto:hmsusu@ust.hk">hmsusu@ust.hk</a></p>
+			<p><b><a href="https://www.researchgate.net/profile/Susu-Lai">ResearchGate</a>, <a href="files/CV_Susu LAI.pdf">Curriculum Vitae</a></b></p>
+                     </div>
+                  </div>
+                  <hr>
+                  <div class="row-fluid">
+                     <div class="span3">
+                        <img src="thumbs/Photo_Jiayu.jpg" alt="Jiayu Liang"/>
+                     </div>
+                     <div class="span9">
+                        <h4>Jiayu LIANG 梁家瑜  (BA: Shandong U)</h4>
+			<p><i>Research Assistant </i></p>
+                        <p>Jiayu holds a BA in English from Shandong University. Her research interests focus on the production and perception of non-native languages, as well as the cross-domain transfer effects between music and language experience. For her undergraduate thesis, Jiayu employed eye-tracking methodology to investigate how Mandarin speakers' musical aptitude influences their perception and production of English vowels. Currently, she is involved in an eye-tracking study examining L2 learners' perceptual learning and consolidation of English lexical stress.</p>
+                        <p><b>Email: </b><a href="mailto:hmjyliang@ust.hk">hmjyliang@ust.hk</a></p>
+			<p><b><a href="https://lexie-liang.github.io/LiangJiayu.github.io/">Personal Website</a>, <a href="https://www.researchgate.net/profile/Jiayu-Liang-14">ResearchGate</a>, <a href="files/CV_Jiayu LIANG.pdf">Curriculum Vitae</a></b></p>
+                     </div>
+                  </div>
+                  <hr>
+	       </section>
+
+               <section id="student">
+                  <div class="page-header">
+                     <h3>Research Student</h3>
+                  </div>
+	          <div class="row-fluid">
+                     <div class="span3">
+                        <img src="thumbs/Photo_Jeremy.jpg" alt="Jeremy, Yin To CHUI"/>
+                     </div>
+                     <div class="span9">
+                        <h4>Jeremy, Yin To CHUI 徐彥韜 (BA: CUHK; MA: PolyU; MPhil: UST)</h4>
+			<p><i>Ph.D Student (HKPFS awardee)</i></p>
+                        <p>Jeremy graduated with an MA degree in Teaching Chinese as a Foreign Language from HK PolyU. He is interested in speech perception as well as the cognitive and computational mechanisms behind perceptual learning. Currently, he is working on whether, and to what extent, younger and older adults make statistical inferences (e.g. distributional information, word-referent co-occurrences) in the implicit perceptual learning L2 lexical tone categories. His previous MPhil project studied the statistical learning of Mandarin lexical tones and how individual differences played a role in learning. Jeremy’s Ph.D study is funded by the Hong Kong PhD Fellowship.</p>
+                        <p><b>Email: </b><a href="mailto:​ytchuiac@connect.ust.hk">​ytchuiac@connect.ust.hk</a></p>
+			<p><b><a href="https://www.researchgate.net/profile/Yin-To-Chui">ResearchGate</a>, <a href="https://orcid.org/0000-0002-2169-086X">ORCID ID</a>,<a href="files/CV_Jeremy.pdf">Curriculum Vitae</a></b></p>
+                     </div>
+                  </div>
+		  <hr>   
+	          <div class="row-fluid">
+                     <div class="span3">
+                        <img src="thumbs/Photo_Yuqi.jpg" alt="Yuqi Wang"/>
+                     </div>
+                     <div class="span9">
+                        <h4>Yuqi WANG 王宇琪 (BA: Tianjin U; MPhil: UST)</h4>
+			<p><i>Ph.D Student (HKPFS awardee)</i></p>
+                        <p>Yuqi graduated from Tianjin University with a BA Degree in English and from HKUST with an MPhil Degree in Humanities. She is interested in aging and the bilingual effect on cognition. She is now working on how language and other experiences (e.g. learning and using more than one language, music training, etc.) benefit one's cognitive abilities (e.g. attention and memory). Her MPhil thesis studied how individual bilingual experiences of younger Cantonese-English speakers influence the attentional control ability in a Forced-attention Dichotic Listening Task of Cantonese tones. Yuqi's PhD study is funded by the Hong Kong PhD Fellowship.</p>
+                        <p><b>Email: </b><a href="mailto:ywangqi@connect.ust.hk">ywangqi@connect.ust.hk</a></p>
+			<p><b><a href="https://www.researchgate.net/profile/Yuqi-Wang-98">ResearchGate</a>, <a href="https://orcid.org/0009-0000-1794-9747​">ORCID ID</a>,<a href="files/CV_Yuqi.pdf">Curriculum Vitae</a></b></p>
+                     </div>
+                  </div>
+		  <hr>   
+	          <div class="row-fluid">
+                     <div class="span3">
+                        <img src="thumbs/Photo_Kangdi.jpg" alt="Kangdi Liu"/>
+                     </div>
+                     <div class="span9">
+                        <h4>Kangdi LIU 劉康迪 (BA: NENU; MA: Nankai)</h4>
+			<p><i>MPhil Student</i></p>
+                        <p>Kangdi graduated from Nankai University with a master's degree in Linguistics and Applied Linguistics. She is interested in phonetics and psycholinguistics, especially focusing on Chinese tones. Her past project studied tone variation and change in the Chinese dialects/languages. At present, she is working on the beneficial effect of prior knowledge on older adults’ memory consolidation in nonnative tone learning.</p>
+                        <p><b>Email: </b><a href="mailto:​kliubc@connect.ust.hk">​kliubc@connect.ust.hk</a></p>
+			<p><b><a href="https://www.researchgate.net/profile/Kangdi-Liu">ResearchGate</a>, <a href="https://orcid.org/0009-0008-1548-4040​​">ORCID ID</a>, <a href="files/CV_Kangdi_new.pdf">Curriculum Vitae</a></b></p>
+                     </div>
+                  </div>
+		  <hr>   
+	       </section>
+               <section id="student">
+                  <div class="page-header">
+                     <h3>Past Members and Alumni</h3>
+                  </div>
+	          <div class="row-fluid">
+                     <div class="span3">
+                        <img src="thumbs/Photo_Cindy.png" alt="Jeremy, Yin To CHUI"/>
+                     </div>
+                     <div class="span9">
+                        <h4>Cindy, Rui JIN 金蕊  (Senior Research Assistant, 2021-2022)</h4>
+                        <p> Cindy is currently a Ph.D student in Psychology at the University of Florida. </p>
+                     </div>
+                  </div>
+		  <hr>   
+	          <div class="row-fluid">
+                     <div class="span3">
+                        <img src="thumbs/Photo_Ruofan_edited.jpg" alt="Ruofan Wu"/>
+                     </div>
+                     <div class="span9">
+                        <h4>Ruofan WU 吳若繁 (Research Assistant, 2022-2023)</h4>
+                        <p>Ruofan is currently a Ph.D student at the Hong Kong Polytechnic University. </p>
+                     </div>
+                  </div>
+		  <hr>   
+		       
+
+
+               </section>
+
+      </div>
 
 
       <!-- Le javascript ================================================== -->
