--- a/contact.html
+++ b/contact.html
@@ -11,6 +11,9 @@
       <link href="css/bootstrap-responsive.min.css" rel="stylesheet">
       <link href="css/theme.css" rel="stylesheet">
       	  <style>
+	   body {
+	      font-family: 'Montserrat', sans-serif;
+	   }
 		         ol {
 	      display: block;
 	      list-style-type: disc;
