--- a/news.html
+++ b/news.html
@@ -11,7 +11,7 @@
       <link href="css/bootstrap-responsive.min.css" rel="stylesheet">
       <link href="css/theme.css" rel="stylesheet">
    </head>
-   <body>
+   <body style="font-family: 'Montserrat', sans-serif;">
       <div class="container">
          <header class="jumbotron subhead" id="overview">
             <p class="lead"> Velit Aliquet Sagittis University </p>
