--- a/media.html
+++ b/media.html
@@ -10,6 +10,9 @@
       <link href="css/bootstrap.min.css" rel="stylesheet">
       <link href="css/bootstrap-responsive.min.css" rel="stylesheet">
       <link href="css/theme.css" rel="stylesheet">
+      <link rel="preconnect" href="https://fonts.googleapis.com">
+      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+      <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
       <style>
          ol {
             display: block;
@@ -21,7 +24,7 @@
          }
          body {
             background-color: white;
-	    font-family: 'Montserrat', sans-serif;
+	    font-family: 'Montserrat', sans-serif;-webkit-font-smoothing: antialiased;
          }
          .responsive-img {
             width: 100%;
