--- a/index.html
+++ b/index.html
@@ -256,6 +256,48 @@
                           <img src="files/Theme1.PNG" style="width: 70%; height: auto; max-width: 200px;" alt="Illustration" class="responsive-img theme-img">
                       </div>
                   </div>
+
+
+               
+                  <!-- Second Content Block -->
+                  <div class="content-with-image"  style="display: flex; align-items: center; gap: -10px;">
+                      <!-- Text Content -->
+                      <div class="text-content" style="flex: 1; text-align: justify;">
+                          <h3>Sleep-dependent consolidation of lexical tones</h3>
+                          <p>
+                              Recent evidence shows that sleep plays a crucial role in transforming newly acquired linguistic knowledge into long-term memory. Given unique characteristics of lexical tones (e.g., high talker-variability of pitch), there is still a vast unexplored area in sleep-mediated memory consolidation of tone learning. By combining behavioral experiments and brain imaging technologies (e.g., EEG), we are dedicated to exploring the relationship between sleep and tone learning, providing memory-based insights for cross-language and cross-age learning of lexical tones.
+                          </p>
+                          <p>
+                              English Participants Wanted —> 
+                              <a href="files/Exp7_poster_UST.png" target="_blank">Nap Project</a> & <a href="files/Exp_Eng_Poster.jpg" target="_blank">Sleep Project</a>
+                          </p>
+                      </div>
+                      <!-- Image Content -->
+                      <div class="image-content" style="flex: 0 0 auto; margin-left: -10px; text-align: right;">
+                          <img src="files/Theme2.PNG" style="width: 70%; height: auto; max-width: 200px;" alt="Illustration" class="responsive-img theme-img">
+                      </div>
+                  </div>
+
+
+                  <!-- Third Content Block -->
+                  <div class="content-with-image" style="display: flex; align-items: center; gap: -10px; flex-wrap: wrap;">
+                      <!-- Text Content -->
+                      <div class="text-content" style="flex: 1; text-align: justify; margin-bottom: 10px;">
+                          <h3>Aging, cognitive, and language learning</h3>
+                          <p>
+                              Our research is concerned with the well-being of the aging population. Older adults are facing the challenges of age-related dysfunction in language learning and cognition (e.g., memory and attention). Indeed, recent projects have aimed at investigating older adults’ decline in lexical tone learning and the possible relationship with cognitive ability. We also attempt to find evidence that multilingual language experiences (including learning a new language) can mitigate cognitive decline and promote healthy aging.
+                          </p>
+                          <p>
+                              Cantonese-speaking Older Adults Wanted —> 
+                              <a href="files/Older adult poster.pdf" target="_blank">FADL Project</a>
+                          </p>
+                   </div>
+                   <!-- Image Content -->
+                   <div class="image-content" style="flex: 0 0 auto; margin-left: -10px; text-align: right; width: 100%; max-width: 200px;">
+                       <img src="files/Theme3.PNG" style="width: 70%; height: auto; max-width: 200px;" alt="Illustration" class="responsive-img theme-img">
+                   </div>
+                  </div>
+
                   <script>
                     // JavaScript动态调整样式
                     const updateContentLayout = () => {
@@ -283,48 +325,6 @@
                     // 监听窗口大小变化
                     window.addEventListener('resize', updateContentLayout);
                   </script>
-
-
-               
-                  <!-- Second Content Block -->
-                  <div class="content-with-image"  style="display: flex; align-items: center; gap: -10px;">
-                      <!-- Text Content -->
-                      <div class="text-content" style="flex: 1; text-align: justify;">
-                          <h3>Sleep-dependent consolidation of lexical tones</h3>
-                          <p>
-                              Recent evidence shows that sleep plays a crucial role in transforming newly acquired linguistic knowledge into long-term memory. Given unique characteristics of lexical tones (e.g., high talker-variability of pitch), there is still a vast unexplored area in sleep-mediated memory consolidation of tone learning. By combining behavioral experiments and brain imaging technologies (e.g., EEG), we are dedicated to exploring the relationship between sleep and tone learning, providing memory-based insights for cross-language and cross-age learning of lexical tones.
-                          </p>
-                          <p>
-                              English Participants Wanted —> 
-                              <a href="files/Exp7_poster_UST.png" target="_blank">Nap Project</a> & <a href="files/Exp_Eng_Poster.jpg" target="_blank">Sleep Project</a>
-                          </p>
-                      </div>
-                      <!-- Image Content -->
-                      <div class="image-content" style="flex: 0 0 auto; margin-left: -10px; text-align: right;">
-                          <img src="files/Theme2.PNG" style="width: 70%; height: auto; max-width: 200px;" alt="Illustration" class="responsive-img theme-img">
-                      </div>
-                  </div>
-
-
-                  <!-- Third Content Block -->
-                  <div class="content-with-image" style="display: flex; align-items: center; gap: -10px;">
-                      <!-- Text Content -->
-                      <div class="text-content" style="flex: 1; text-align: justify;">
-                          <h3>Aging, cognitive, and language learning</h3>
-                          <p>
-                              Our research is concerned with the well-being of the aging population. Older adults are facing the challenges of age-related dysfunction in language learning and cognition (e.g., memory and attention). Indeed, recent projects have aimed at investigating older adults’ decline in lexical tone learning and the possible relationship with cognitive ability. We also attempt to find evidence that multilingual language experiences (including learning a new language) can mitigate cognitive decline and promote healthy aging.
-                          </p>
-                          <p>
-                              Cantonese-speaking Older Adults Wanted —> 
-                              <a href="files/Older adult poster.pdf" target="_blank">FADL Project</a>
-                          </p>
-                   </div>
-                   <!-- Image Content -->
-                   <div class="image-content" style="flex: 0 0 auto; margin-left: -10px; text-align: right;">
-                       <img src="files/Theme3.PNG" style="width: 70%; height: auto; max-width: 200px;" alt="Illustration" class="responsive-img theme-img">
-                   </div>
-                  </div>
-
 
 
 
